feat: setup openapi3 and frontend openapi-fetch
